# BESSER

./: .cursorrules  .dockerignore  .env.example  .env.swp  .gitignore  .gitleaksignore  .gitmodules  .readthedocs.yaml  AGENTS.md  AI_INSTRUCTIONS.md  API_METHODS_TESTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  Dockerfile  Dockerfile.smartgen-worker  GOVERNANCE.md  GUI_METAMODEL_CHANGES.md  GUI_test_JSON_BUML_Code_Gen.py  ISSUE_517_FIX.md  LICENSE.md  OCL_VALIDATION_FEATURE.md  README.md  Test(1).json  _stress_ocl_method_contracts.py  _stresstest_ocl.py  agent_config.json  debug_types.py  docker-compose.prod.yml  docker-compose.yml  gitignore  json_schema.json  lib.py  main.py  model.pkl  package-lock.json  pyproject.toml  reqs.txt  (+8 more)
.cursor/rules/: documentation.md  general.md  python.md  typescript.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md
.github/codeql/: codeql-config.yml
.github/workflows/: build-and-push-artifactory.yml  ci.yml  deploy-wme.yml  python-publish.yml  security.yml
LuxHyVal/: H2PlantDSL.json
QUANTUMTEST/: efdsfdsf.json  efdsfdsf_project.py  efdsfdsf_project_fixed.py  qiskit_circuit.py  quantum_test.py  test_conversion.py
TEST_BACKEND/: BACKEND_REFACTORING.md  TEST_BACKEND.md  test_full_generation.py
TEST_GUI/: GUI_test_JSON_BUML_Code_Gen.py  check_pages.py  test_gui_model.py
TEST_GUI/output/: Statec.json  TEST_GUI.json  z.json  (+4 more)
Test_Smart_Data/: Network-DataSchema.json  domain_model(1).py  domain_model.py
besser_backend/: main.py
deployment_example/: config_aws.conf  config_docker.conf  config_google.conf  deployment.py  deployment.txt
docs/: django-generator-doc.md  gui_roundtrip_todo.md  metamodel-doc.md  plantuml-doc.md  requirements.txt
examples/: UniversityModel.db  association_class_example.py  ex.py  sql_alchemy.py
object test/: django.plantuml  django.py
output/: gui_model.py  pydantic_classes.py  qiskit_circuit.py  sql_alchemy.py
output_backend/: main_api.py  pydantic_classes.py  requirements.txt  sql_alchemy.py
prueba/: ExampleDrawio.drawio  launch.py  model.drawio  test.plantuml  test.py  testDM.py
tests/: SMART_GEN_TESTING.html  SMART_GEN_TESTING.md  bpmn_models.py  conftest.py  test_main.py  test_qiskit_empty_function_gates.py
(+3277 files in other folders)
