[metadata]
name = besser
version = 0.1.0
author = Luxembourg Institute of Science and Technology
description = BESSER
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BESSER-PEARL/BESSER
keywords = uml, code generation, python
license = MIT
license_files = LICENSE

[options]
python_requires = >=3.9, <4
install_requires = file: requirements.txt
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
* = *.j2