[metadata]
name = besser
version = 5.1.0
author = Luxembourg Institute of Science and Technology
description = BESSER
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = https://besser.readthedocs.io/en/latest/
    Source Code = https://github.com/BESSER-PEARL/BESSER
    Bug Tracker = https://github.com/BESSER-PEARL/BESSER/issues
keywords = uml, code generation, python
license = MIT
license_files = LICENSE.md

[options]
python_requires = >=3.10
install_requires = file: requirements.txt
packages=find:

[options.package_data]
* = *.j2

[options.extras_require]
nn = 
    pillow>=11.1.0
    numpy>=2.2.4
    torch>=2.6.0